@@ -274,6 +274,20 @@ subdirectories).
   However, if a backend changes the information it uses to construct a key,
   this can also be used to migrate files to use the new key format.
 
+* setcontent src dest
+
+  Makes the dest file, which must already be tracked by git-annex have the
+  content of the src file. The src file is removed. This can be useful if you
+  have obtained the content of a file from elsewhere and want to put it in
+  the local annex.
+
+  Automatically runs fsck on dest to check that the expected content was
+  provided.
+
+  Example:
+
+	git annex setcontent /tmp/foo.iso foo.iso
+
 * unannex [path ...]
 
   Use this to undo an accidental `git annex add` command. You can use
@@ -320,15 +334,6 @@ subdirectories).
   Example:
 
 	git annex dropkey SHA1-s10-7da006579dd64330eb2456001fd01948430572f2
-
-* setkey file
-
-  This plumbing-level command sets the annexed data for a key to the
-  content of the specified file, and then removes the file.
-
-  Example:
-
-	git annex setkey --key=WORM-s3-m1287765018--file /tmp/file
 
 # OPTIONS
 
