@@ -13,6 +13,8 @@ git-annex (3.20111026) UNRELEASED; urgency=low
     .gitattributes information about numcopies is not available in a bare
     repository.
   * unused, dropunused: Now work in bare repositories.
+  * Removed the setkey command, and added a setcontent command with a more
+    useful interface.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 27 Oct 2011 13:58:53 -0400
 
